Revision history for Class-Tiny

{{$NEXT}}

1.000     2014-07-16 09:55:29-04:00 America/New_York

    [*** INCOMPATIBLE CHANGES ***]

    - Attributes for custom accessors *MUST* be declared for them to be
      set via the constructor.  It is no longer sufficient for a method of
      the same name to exist.

    - Unknown constructor arguments are ignored rather than fatal; they are
      not included in the object.  Special instructions for using BUILD to
      hide constructor arguments from validation are irrelevant and have
      been removed.

    - These changes make Class::Tiny-based classes easier to subclass by
      more advanced object frameworks like Moose or Moo.

0.015     2014-07-13 23:10:47-04:00 America/New_York

    [CHANGED]

    - lowered minimum perl to 5.006

0.014     2013-11-28 07:12:14 America/New_York

    [FIXED]

    - put back a 'no warnings "once"' line that caused downstream warnings

0.013     2013-11-26 12:01:13 America/New_York

    [DOCUMENTED]

    - expanded comparision to Object::Tiny and Class::Accessor

0.012     2013-11-01 16:36:35 America/New_York

    [DOCUMENTED]

    - added documentation notes about multiple inheritance
      and attribute defaults under subclassing

    [INTERNAL]

    - added tests for multiple inheritance

0.011     2013-09-25 11:08:07 America/New_York

    [FIXED]

    - compile test could hang on Windows

    [PREREQS]

    - ExtUtils::MakeMaker configure_requires dropped to 6.17

0.010     2013-09-18 13:23:15 America/New_York

    [FIXED]

    - suppressed 'used only once' warnings (GH #9)

0.009     2013-09-17 06:54:47 America/New_York

    [FIXED]

    - "won't stay shared" bug on older perls

0.008     2013-09-08 09:49:46 America/New_York

    [FIXED]

    - META.yml encoding problems

    [DOCUMENTED]

    - revised CONTRIBUTING

    [INTERNAL]

    - refactored precaching

0.007     2013-09-07 16:48:56 America/New_York

    [OPTIMIZED]
